website/versioned_docs/version-1.0.0/CHANGELOG.md
---
title: Changelog
id: version-1.0.0-changelog
original_id: changelog
---

<a name="1.0.0"></a>
# [1.0.0](https://github.com/SpoonX/stix/compare/v0.2.2...v1.0.0) (2018-09-21)


### Features

* **project:** setup tests and add config with Map support ([3a492b4](https://github.com/SpoonX/stix/commit/3a492b4))
* **ServiceManager:** implement the service manager ([d778841](https://github.com/SpoonX/stix/commit/d778841))



<a name="0.2.2"></a>
## [0.2.2](https://github.com/SpoonX/stix/compare/v0.2.1...v0.2.2) (2018-09-18)


### Bug Fixes

* **Config:** add missing RoutesConfigInterface export ([80cec7b](https://github.com/SpoonX/stix/commit/80cec7b))



<a name="0.2.1"></a>
## [0.2.1](https://github.com/SpoonX/stix/compare/v0.2.0...v0.2.1) (2018-09-18)


### Bug Fixes

* **middleware:** fix Middleware typing ([4dce743](https://github.com/SpoonX/stix/commit/4dce743))



<a name="0.2.0"></a>
# [0.2.0](https://github.com/SpoonX/stix/compare/v0.1.3...v0.2.0) (2018-09-18)



<a name="0.1.3"></a>
## [0.1.3](https://github.com/SpoonX/stix/compare/v0.1.2...v0.1.3) (2018-09-18)



<a name="0.1.2"></a>
## [0.1.2](https://github.com/SpoonX/stix/compare/v0.1.1...v0.1.2) (2018-09-18)



<a name="0.1.1"></a>
## [0.1.1](https://github.com/SpoonX/stix/compare/v0.1.0...v0.1.1) (2018-09-18)


### Bug Fixes

* **Library:** add Module exports and use ControllerType ([c2f2553](https://github.com/SpoonX/stix/commit/c2f2553))



<a name="0.1.0"></a>
# [0.1.0](https://github.com/SpoonX/stix/compare/v0.0.4...v0.1.0) (2018-09-18)


### Features

* **Controller:** expose ControllerType ([9de95c8](https://github.com/SpoonX/stix/commit/9de95c8))



<a name="0.0.4"></a>
## [0.0.4](https://github.com/SpoonX/stix/compare/v0.0.3...v0.0.4) (2018-09-18)



<a name="0.0.3"></a>
## [0.0.3](https://github.com/SpoonX/stix/compare/v0.0.2...v0.0.3) (2018-09-18)



<a name="0.0.2"></a>
## [0.0.2](https://github.com/SpoonX/stix/compare/v0.0.1...v0.0.2) (2018-09-18)



<a name="0.0.1"></a>
## 0.0.1 (2018-09-18)



